@@ -1423,6 +1423,24 @@ public class FolderInfo implements MessageCountListener, ValueChangeListener, Us
       Pooka.getUIFactory().showError(Pooka.getProperty("error.folder.unsubscribe", "Error unsubscribing on server from folder ") + getFolderID(), me);
     }
   }
+
+  /**
+   * This deletes the underlying Folder.
+   */
+  public void delete() throws MessagingException {
+    
+    if (! isLoaded())
+      loadFolder();
+
+    Folder f = getFolder();
+    if (f == null)
+      throw new MessagingException("No folder.");
+
+    unsubscribe();
+
+    f.close(true);
+    f.delete(true);
+  }
   
   /**
    * This returns whether or not this Folder is set up to use the 
@@ -1467,51 +1485,51 @@ public class FolderInfo implements MessageCountListener, ValueChangeListener, Us
     }
   }
 
-    /**
-     * This resets the defaultActions.  Useful when this goes to and from
-     * being a trashFolder, since only trash folders have emptyTrash
-     * actions.
-     */
-    public void resetDefaultActions() {
-      if (isTrashFolder()) {
-	defaultActions = new Action[] {
-	  new net.suberic.util.thread.ActionWrapper(new UpdateCountAction(), getFolderThread()),
-	  new net.suberic.util.thread.ActionWrapper(new EmptyTrashAction(), getFolderThread()),
-	  new EditPropertiesAction()
-	    };
-	} else if (isOutboxFolder()) {
-	defaultActions = new Action[] {
-	  new net.suberic.util.thread.ActionWrapper(new UpdateCountAction(), getFolderThread()),
-	  new net.suberic.util.thread.ActionWrapper(new SendAllAction(), getFolderThread()),
-	  new EditPropertiesAction()
-	    };
-	  
-	} else {
-	  defaultActions = new Action[] {
-	    new net.suberic.util.thread.ActionWrapper(new UpdateCountAction(), getFolderThread()),
-	    new EditPropertiesAction()
-	      };
-	}
+  /**
+   * This resets the defaultActions.  Useful when this goes to and from
+   * being a trashFolder, since only trash folders have emptyTrash
+   * actions.
+   */
+  public void resetDefaultActions() {
+    if (isTrashFolder()) {
+      defaultActions = new Action[] {
+	new net.suberic.util.thread.ActionWrapper(new UpdateCountAction(), getFolderThread()),
+	new net.suberic.util.thread.ActionWrapper(new EmptyTrashAction(), getFolderThread()),
+	new EditPropertiesAction()
+      };
+    } else if (isOutboxFolder()) {
+      defaultActions = new Action[] {
+	new net.suberic.util.thread.ActionWrapper(new UpdateCountAction(), getFolderThread()),
+	new net.suberic.util.thread.ActionWrapper(new SendAllAction(), getFolderThread()),
+	new EditPropertiesAction()
+      };
+      
+    } else {
+      defaultActions = new Action[] {
+	new net.suberic.util.thread.ActionWrapper(new UpdateCountAction(), getFolderThread()),
+	new EditPropertiesAction()
+      };
     }
+  }
 
-    // semi-accessor methods.
-
-    public MessageProxy getMessageProxy(int rowNumber) {
-	return getFolderTableModel().getMessageProxy(rowNumber);
-    }
-
-    public MessageInfo getMessageInfo(Message m) {
-	return (MessageInfo)messageToInfoTable.get(m);
-    }
-
-    public void addMessageCountListener(MessageCountListener newListener) {
-	eventListeners.add(MessageCountListener.class, newListener);
-    }
-	
-    public void removeMessageCountListener(MessageCountListener oldListener) {
-	eventListeners.remove(MessageCountListener.class, oldListener);
-    }
-
+  // semi-accessor methods.
+  
+  public MessageProxy getMessageProxy(int rowNumber) {
+    return getFolderTableModel().getMessageProxy(rowNumber);
+  }
+  
+  public MessageInfo getMessageInfo(Message m) {
+    return (MessageInfo)messageToInfoTable.get(m);
+  }
+  
+  public void addMessageCountListener(MessageCountListener newListener) {
+    eventListeners.add(MessageCountListener.class, newListener);
+  }
+  
+  public void removeMessageCountListener(MessageCountListener oldListener) {
+    eventListeners.remove(MessageCountListener.class, oldListener);
+  }
+  
   public void fireMessageCountEvent(MessageCountEvent mce) {
     
     if (Pooka.isDebug())
