@@ -604,6 +604,13 @@ FolderFilters.FontFilter.label=Font Style
 Folder.unsubscribeConfirm=Do you really want to unsubscribe from the following folder?
 Folder.unsubscribeConfirm.notLeaf=Do you really want to unsubscribe from the following folder and all its children?
 Folder.unsubscribeConfirm.title=Unsubscribe from Folder?
+
+Folder.deleteConfirm=Do you really want to delete the following folder?
+Folder.deleteConfirm.notLeaf=Do you really want to delete the following folder and all its children?
+Folder.deleteConfirm.title=Delete Folder?
+Folder.deleteConfirm.secondMessage=Are you sure?  This will permanently remove the folder and all of its messages
+Folder.deleteConfirm.secondMessage.title=Are you sure?
+
 Folder.new=Subscribe/create new subfolder of
 Folder.new.title=Create new Folder
 
