@@ -1,3 +1,5 @@
+Added a way to delete a folder.
+
 Pooka now remembers its location on screen when restarting.
 
 fixed a problem in Preview mode in which the folder toolbar wouldn't get
